--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -307,6 +307,8 @@
           href: ../connectors/connectors-create-api-yammer.md
     - name: 管理
       items:
+        - name: 管理逻辑应用 - Azure 门户
+          href: manage-logic-apps-with-azure-portal.md
         - name: 管理逻辑应用 - Visual Studio
           href: manage-logic-apps-with-visual-studio.md
         - name: 管理集成帐户
