--- a/articles/azure-functions/index.yml
+++ b/articles/azure-functions/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: ggailey777
   ms.author: azfundocs
   ms.date: 09/17/2019
-  ms.openlocfilehash: 58280fd65558cc6785cc40df94138f3a663dabb8
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: a08908b699d50a7e1e740f162a0b3f53fa96e434
+  ms.sourcegitcommit: d187fe0143d7dbaf8d775150453bd3c188087411
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "77047237"
+  ms.lasthandoff: 04/08/2020
+  ms.locfileid: "80886562"
 landingContent:
 - title: 关于 Azure Functions
   linkLists:
@@ -43,7 +43,7 @@ landingContent:
     - text: 创建第一个函数 (C#)
       url: functions-create-your-first-function-visual-studio.md
     - text: 创建第一个函数 (Java)
-      url: functions-create-first-java-maven.md
+      url: functions-create-first-azure-function-azure-cli.md?pivots=programming-language-java
     - text: 创建第一个函数 (JavaScript)
       url: functions-create-first-function-vs-code.md?pivots=programming-language-javascript
     - text: 创建第一个函数 (PowerShell)
@@ -134,7 +134,7 @@ landingContent:
       url: functions-networking-options.md
   - linkListType: how-to-guide
     links:
-    - text: 故障排除
+    - text: 疑难解答
       url: functions-recover-storage-account.md
 - title: 长时间运行的函数
   linkLists:
