--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -89,7 +89,7 @@
     - name: 使用来宾配置审核 VM
       displayName: 'provider, tools, definition'
       href: ./concepts/guest-configuration.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 适用于 VS Code 的 Azure Policy 扩展
       displayName: visual studio code
@@ -151,6 +151,12 @@
           href: /dotnet/api/microsoft.azure.management.resourcemanager.models.policyassignment
         - name: 策略定义
           href: /dotnet/api/microsoft.azure.management.resourcemanager.models.policydefinition
+    - name: 用于 Java 的 Azure SDK
+      items:
+        - name: 分配
+          href: /java/api/com.microsoft.azure.management.resources.policyassignment?view=azure-java-stable
+        - name: 策略定义
+          href: /java/api/com.microsoft.azure.management.resources.PolicyDefinitions?view=azure-java-stable
     - name: 用于 Node 的 Azure SDK
       items:
         - name: 策略
@@ -169,7 +175,7 @@
       items:
         - name: 事件
           href: /rest/api/policy-insights/policyevents
-        - name: States
+        - name: 状态
           href: /rest/api/policy-insights/policystates
         - name: 分配
           href: /rest/api/resources/policyassignments
