--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -81,7 +81,7 @@
           href: amazon-business-tutorial.md
         - name: Amazon Web Services (AWS)
           href: amazon-web-service-tutorial.md
-        - name: 可连接多个帐户的 Amazon Web Services (AWS)
+        - name: Amazon Web Services (AWS)（旧版教程）
           href: aws-multi-accounts-tutorial.md
         - name: AMMS
           href: amms-tutorial.md
