--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -140,10 +140,14 @@
           href: cluster-autoscaler.md
         - name: 使用可用性区域
           href: availability-zones.md
-        - name: 使用多个节点池
-          href: use-multiple-node-pools.md
-        - name: 使用点节点池（预览版）
-          href: spot-node-pool.md
+        - name: 使用节点池
+          items:
+            - name: 使用多个节点池
+              href: use-multiple-node-pools.md
+            - name: 使用点节点池（预览版）
+              href: spot-node-pool.md
+            - name: 使用系统节点池
+              href: use-system-pools.md
         - name: 使用 Terraform 部署 AKS
           href: ../terraform/terraform-create-k8s-cluster-with-tf-and-aks.md
           maintainContext: true
