--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -53,6 +53,8 @@
       href: ../cdn/cdn-add-to-web-app.md?toc=%2fazure%2fcdn%2ftoc.json
     - name: 对用户进行身份验证
       href: app-service-web-tutorial-auth-aad.md
+    - name: 发送电子邮件/推文
+      href: tutorial-send-email.md
 - name: 示例
   items:
     - name: Azure CLI
@@ -263,7 +265,7 @@
           href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/app-service-web-app/basic-web-app'
         - name: 部署脚本
           href: 'https://azure.microsoft.com/documentation/scripts/'
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 排查间歇性出站连接错误
           href: troubleshoot-intermittent-outbound-connection-errors.md
