--- a/articles/cognitive-services/Bing-Web-Search/index.yml
+++ b/articles/cognitive-services/Bing-Web-Search/index.yml
@@ -14,12 +14,12 @@ metadata:
   author: aahill
   ms.author: aahi
   ms.date: 11/06/2019
-  ms.openlocfilehash: 437c23bd99e3b0ee5ff366d279e10c3eb1a73bac
-  ms.sourcegitcommit: 980c3d827cc0f25b94b1eb93fd3d9041f3593036
+  ms.openlocfilehash: b7f33420582340125e0c2abff80cce9a67fdcb7f
+  ms.sourcegitcommit: d187fe0143d7dbaf8d775150453bd3c188087411
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/02/2020
-  ms.locfileid: "80549130"
+  ms.lasthandoff: 04/08/2020
+  ms.locfileid: "80886528"
 highlightedContent:
   items:
   - title: 比较必应搜索 API
@@ -182,7 +182,10 @@ conceptualContent:
     links:
     - text: 使用 C#
       itemType: quickstart
-      url: ../Bing-Autosuggest/quickstarts/csharp.md
+      url: ../bing-autosuggest/quickstarts/client-libraries.md?pivots=programming-language-csharp
+    - text: 使用 Go
+      itemType: quickstart
+      url: ../Bing-Autosuggest/quickstarts/client-libraries.md?pivots=programming-language-go
     - text: 使用 Java
       itemType: quickstart
       url: ../Bing-Autosuggest/quickstarts/java.md
