--- a/articles/virtual-machines/workloads/oracle/toc.yml
+++ b/articles/virtual-machines/workloads/oracle/toc.yml
@@ -4,7 +4,7 @@
       href: oracle-overview.md
     - name: Azure VM 上的解决方案
       href: oracle-vm-solutions.md
-    - name: 与 OCI 集成的解决方案 - 预览版
+    - name: 与 OCI 集成的解决方案
       href: oracle-oci-overview.md
 - name: 快速入门
   items:
@@ -30,9 +30,9 @@
       href: oracle-backup-recovery.md
     - name: Oracle 灾难恢复选项
       href: oracle-disaster-recovery.md
-- name: 操作方法指南
+- name: 操作指南
   items:
-    - name: 将 Azure 和 OCI 互连 - 预览版
+    - name: 将 Azure 和 OCI 互连
       href: configure-azure-oci-networking.md
 - name: 资源
   items:
