--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -51,7 +51,7 @@
               href: nat-gateway-resource.md
             - name: 指标和警报
               href: nat-metrics.md
-            - name: 故障排除
+            - name: 疑难解答
               href: troubleshoot-nat.md
         - name: 路由
           href: virtual-networks-udr-overview.md
@@ -71,7 +71,11 @@
           href: ../expressroute/cross-network-connectivity.md?toc=%2fazure%2fvirtual-network%2ftoc.json
         - name: 对等互连
           href: virtual-network-peering-overview.md
-        - name: Azure 服务的虚拟网络
+    - name: Azure 服务集成
+      items:
+        - name: 服务终结点
+          href: virtual-network-service-endpoints-overview.md
+        - name: 部署专用服务
           href: virtual-network-for-azure-services.md
     - name: IP 服务
       items:
@@ -91,8 +95,6 @@
           href: application-security-groups.md
         - name: 服务标记
           href: service-tags-overview.md
-        - name: 服务终结点
-          href: virtual-network-service-endpoints-overview.md
         - name: 服务终结点策略
           href: virtual-network-service-endpoint-policies-overview.md
         - name: Kubernetes 网络策略
@@ -109,7 +111,7 @@
           href: subnet-delegation-overview.md
     - name: 经典部署
       href: 'https://docs.microsoft.com/previous-versions/azure/virtual-network/virtual-network-ip-addresses-overview-classic'
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 规划和配置
       items:
@@ -359,7 +361,7 @@
           href: tutorial-create-validate-nat-gateway-powershell.md
         - name: 创建并验证 NAT 网关 - CLI
           href: tutorial-create-validate-nat-gateway-cli.md
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 排查虚拟网络对等互连问题
           href: virtual-network-troubleshoot-peering-issues.md
