commit translated contents

--- a/articles/cognitive-services/Speech-Service/index-speech-to-text.yml
+++ b/articles/cognitive-services/Speech-Service/index-speech-to-text.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Landing
-title: 语音到文本文档
+title: 语音转文本文档
 summary: 语音服务中的语音到文本（也称为语音识别）可实时批量将音频流转录到文本中。
 metadata:
   title: 语音到文本文档 - 教程，API 参考 - Azure 认知服务 |微软文档
@@ -11,22 +11,22 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/19/2020
   ms.author: dapine
-  ms.openlocfilehash: dd42fd57d8daa00d5507405a0d5e3145b335de84
-  ms.sourcegitcommit: 632e7ed5449f85ca502ad216be8ec5dd7cd093cb
+  ms.openlocfilehash: 28bd088965364411f7943f5bf50b5d245c49668e
+  ms.sourcegitcommit: a53fe6e9e4a4c153e9ac1a93e9335f8cf762c604
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/30/2020
-  ms.locfileid: "80397774"
+  ms.lasthandoff: 04/09/2020
+  ms.locfileid: "80991358"
 landingContent:
 - title: 关于语音到文本
   linkLists:
   - linkListType: overview
     links:
-    - text: 什么是实时语音到文本？
+    - text: 什么是实时语音转文本？
       url: speech-to-text.md
-    - text: 什么是批量语音文本？
+    - text: 什么是批量语音转文本？
       url: batch-transcription.md
-    - text: 语音识别基础知识？
+    - text: 语音识别基础知识
       url: speech-to-text-basics.md
   - linkListType: quickstart
     links:
@@ -44,7 +44,7 @@ landingContent:
       url: how-to-choose-recognition-mode.md
     - text: 更改语音识别源语言
       url: how-to-specify-source-language.md
-    - text: 使用自定义语音提高准确性
+    - text: 使用自定义语音识别提高准确性
       url: how-to-custom-speech.md
     - text: 使用压缩的音频输入格式
       url: how-to-use-codec-compressed-audio-input-streams.md
@@ -56,7 +56,7 @@ landingContent:
     links:
     - text: 准备自定义语音的数据
       url: how-to-custom-speech-test-and-train.md
-    - text: 训练自定义语音模型
+    - text: 训练自定义语音的模型
       url: how-to-custom-speech-train-model.md
     - text: 创建用户标记的听录内容
       url: how-to-custom-speech-human-labeled-transcriptions.md
