--- a/articles/synapse-analytics/sql-data-warehouse/index.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: julieMSFT
   ms.author: jrasnick
   ms.date: 10/03/2019
-  ms.openlocfilehash: e8fc0a0b66b72ecf23ef89952f4151eb25153470
-  ms.sourcegitcommit: 2d7910337e66bbf4bd8ad47390c625f13551510b
+  ms.openlocfilehash: 16855697c61bb4b919d4f7dcaa752d3a17f6dbef
+  ms.sourcegitcommit: 25490467e43cbc3139a0df60125687e2b1c73c09
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/08/2020
-  ms.locfileid: "80877417"
+  ms.lasthandoff: 04/09/2020
+  ms.locfileid: "80998824"
 landingContent:
 - title: 关于 Azure Synapse Analytics
   linkLists:
@@ -41,6 +41,10 @@ landingContent:
       url: create-data-warehouse-portal.md
 - title: 加载数据
   linkLists:
+  - linkListType: quickstart
+    links:
+    - text: 使用 COPY 语句快速引入数据
+      url: quickstart-bulk-load-copy-tsql.md
   - linkListType: concept
     links:
     - text: 设计数据加载策略
