--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -278,9 +278,6 @@
         - name: 使用状态配置将服务器配置为所需状态并管理偏移
           href: tutorial-configure-servers-desired-state.md
           displayName: 'DSC, compliance'
-        - name: 载入用于管理的计算机
-          href: automation-dsc-onboarding.md
-          displayName: 'DSC, state configuration'
         - name: 编译 DSC 配置
           href: automation-dsc-compile.md
           displayName: 'state configuration, composite resources, configurationData'
@@ -289,7 +286,7 @@
           displayName: 'state configuration, DSC, remediate'
         - name: 使用复合资源编写 DSC 配置
           href: compose-configurationwithcompositeresources.md
-        - name: 使用 Chocolatey 进行连续部署
+        - name: 使用 Chocolatey 提供连续部署
           href: automation-dsc-cd-chocolatey.md
           displayName: 'dsc, state configuration'
         - name: 将状态配置报告数据转发到 Azure Monitor 日志
@@ -297,12 +294,12 @@
           displayName: DSC
     - name: 疑难解答
       items:
-        - name: 登记
+        - name: 排查载入问题
           href: troubleshoot/onboarding.md
           displayName: troubleshoot
         - name: 排查 State Configuration (DSC) 问题
           href: troubleshoot/desired-state-configuration.md
-          displayName: 'Desired State Configuration, troubleshoot'
+          displayName: 'state configuration, DSC, troubleshoot'
     - name: 参考
       items:
         - name: 社区解决方案
